--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
 
-    <title>프론트엔드 개발자 김진평입니다...</title>
+    <title>프론트엔드 개발자 김진평입니다.</title>
   </head>
   <body>
     <div>
