--- a/index.html
+++ b/index.html
@@ -65,71 +65,94 @@
             </div>
           </div>
           <!--about me section-->
-          <div class="pagination2 container">
-            <h2>About Me</h2>
-            <div class="about-inner1">
-              <img id="about-inner1-image" src="assets/images/220920-JPK.jpg" />
-            </div>
-            <div class="about-inner-contents">
-              <b style="font-size: 24px">Frontend Developer</b>
-              <br /><br />
-              <span id="about-contents"
-                >도태되지 않고 롱런하는 개발자가 되는 것이 목표인 김진평입니다.
-                <br />
-                <br />
-                급변하는 개발시장에 맞춰 갈 수 있도록 트렌드에 민감한 개발자가
-                되겠습니다.
-                <br />
-                존중하고 합리적으로 협업하는 개발자가 되겠습니다.
-                <br />
-                개발자의 길이 결코 쉬운 길이 아니라는 것을 알고 있습니다.
-                <br />
-                직면한 문제에 과감히 부딪히고 끝까지 포기하지 않는 개발자가
-                되겠습니다.
-                <br />
-                <span class="point">→</span> <b>Full name : Kim JinPyeong</b>
-                <br />
-                <span class="point">→</span> <b>Phone : +82)10-7581-2726</b
-                ><br />
-                <span class="point">→</span> <b>Email : jinp1993@naver.com</b
-                ><br />
-                <span class="point">→</span>
-                <b>Address : 경기도 용인시 기흥구</b></span
-              >
-            </div>
-
-            <div class="about-inner2">
-              <h2>Development Experience</h2>
-              <h4>개발 경력에 대한 설명입니다.</h4>
-              <div class="distinguish-year">
-                <span class="point">2019 > </span
-                ><span class="point2"
-                  >KG Itbank 웹개발자 양성과정 국비교육 수료</span
-                >
+          <div class="pagination2">
+            <div class="section-title"><b>About Me</b></div>
+            <div class="about-container">
+              <br />
+              <div class="about-img">
+                <img id="about-img" src="assets/images/220920-JPK.jpg" />
               </div>
-              <div class="distinguish-year">
-                <span class="point">2020 ~ 현재 > </span
-                ><span class="point2"
-                  >(주)플레이오토 개발팀 입사하여 재직중</span
+              <div class="about-content">
+                <b style="font-size: 24px">Frontend Developer</b>
+                <br /><br />
+                <span class="span-pretty"
+                  >롱런하는 개발자가 되는 것이 목표인 김진평입니다.
+                  <br />
+                  <br />
+                  끊임없이 노력하여 스스로 떳떳한 개발자가 되고 싶습니다.
+                  <br />
+                  어느 곳에서 어떤 개발을 하더라도 끝까지 해낼 수 있는 개발자가
+                  되겠습니다.
+                  <br />
+                  존중하고 배려하는 자세로 누구든지 저와 협업하고싶다라는 생각이
+                  들도록 항상 생각하고 행동하는 개발자가 되겠습니다.
+                  <br />
+                  개발자의 길이 결코 쉬운 길이 아니라는 것을 알고 있습니다.
+                  <br />
+                  직면한 문제에 과감히 부딪히고 끝까지 포기하지 않는 개발자가
+                  되겠습니다.
+                  <br />
+                  <span class="point">→</span>
+                  <b>Full name : Kim JinPyeong</b>
+                  <br /><br />
+                  <span class="point">→</span> <b>Phone : +82)10-7581-2726</b>
+                  <br /><br />
+                  <span class="point">→</span>
+                  <b>Email : jinp1993@naver.com</b><br /><br />
+                  <span class="point">→</span>
+                  <b>Address : 경기도 용인시 기흥구</b></span
                 >
               </div>
             </div>
-            <div class="about-inner2">
-              <h2>Licences</h2>
-              <h4>현재 보유중인 자격증입니다.</h4>
-              <div>
-                <span class="point"> > </span
-                ><span class="point2">리눅스 마스터 2급, 운전면허증</span>
+          </div>
+          <!--skills section-->
+          <div class="pagination3" style="background-color: beige">
+            <div class="section-title"><b>Skill</b></div>
+            <div class="skill-container">
+              <div class="skill-inner">
+                <div class="skill">
+                  <span class="logo">HTML5</span>
+                  <img src="assets/images/html.png" id="img-logo" alt="html" />
+                  <div class="progress-bar">
+                    <div class="progress-html"></div>
+                  </div>
+                  <span class="logo">&nbsp;70%</span>
+                </div>
+                <div class="skill">
+                  <span class="logo"
+                    >&nbsp;&nbsp;&nbsp;CSS&nbsp;&nbsp;&nbsp;</span
+                  >
+                  <img src="assets/images/css.png" id="img-logo" alt="css" />
+                  <div class="progress-bar">
+                    <div class="progress-css"></div>
+                  </div>
+                  <span class="logo">&nbsp;50%</span>
+                </div>
+                <div class="skill">
+                  <span class="logo">HTML5</span>
+                  <img src="assets/images/js.png" id="img-logo" alt="html" />
+                  <div class="progress-bar">
+                    <div class="progress-js"></div>
+                  </div>
+                  <span class="logo">&nbsp;60%</span>
+                </div>
+                <div class="skill">
+                  <span class="logo">&nbsp;REACT</span>
+                  <img src="assets/images/react.png" id="img-logo" alt="html" />
+                  <div class="progress-bar">
+                    <div class="progress-react"></div>
+                  </div>
+                  <span class="logo">&nbsp;80%</span>
+                </div>
               </div>
             </div>
           </div>
-          <div class="pagination3 container" style="background-color: beige">
-            <!--skills section-->
-            <h2>Skills</h2>
-          </div>
-          <div class="pagination4 container">
+          <div class="pagination4">
             <!--portfolio section-->
-            <h2>Portfolio</h2>
+            <div class="section-title"><b>Portfolio</b></div>
+            <div class="portfolio-container">
+              <div class="portfolio-inner">제작 준비 중...</div>
+            </div>
           </div>
         </div>
       </article>
